[gd_scene format=3 uid="uid://dmq5rhywe30a6"]

[ext_resource type="Script" uid="uid://dapvp1g8x4ssw" path="res://audio.gd" id="1_c7q73"]
[ext_resource type="AudioStream" uid="uid://c7spj401x8ndb" path="res://audio/Masquerade_Club_BPM120_Menu_Music.wav" id="2_bhwvj"]
[ext_resource type="AudioStream" uid="uid://cyymtt3xj7d6m" path="res://audio/Question_Select.wav" id="3_cd7xo"]
[ext_resource type="AudioStream" uid="uid://b8s163g3xtyx8" path="res://audio/Animal_Speak_01.wav" id="4_4wya5"]
[ext_resource type="AudioStream" uid="uid://cxx7jau1ujxx2" path="res://audio/Animal_Speak_02.wav" id="5_bhwvj"]
[ext_resource type="AudioStream" uid="uid://cwf10p1qinktf" path="res://audio/Animal_Speak_05.wav" id="6_jjmqj"]
[ext_resource type="AudioStream" uid="uid://dh2o0xewf0bv1" path="res://audio/Animal_Speak_04.wav" id="7_g4ws7"]
[ext_resource type="AudioStream" uid="uid://b28td0ovhvv0r" path="res://audio/Animal_Speak_03.wav" id="8_7x6j8"]
[ext_resource type="AudioStream" uid="uid://cicy35cqrhsas" path="res://audio/MASQUERADE_CLUB_BPM120_MUFFLED.wav" id="9_jjmqj"]

[node name="Audio" type="Node2D" unique_id=1433472737]
script = ExtResource("1_c7q73")

[node name="MenuMusic" type="AudioStreamPlayer" parent="." unique_id=581210185]
stream = ExtResource("2_bhwvj")
autoplay = true

[node name="Click" type="AudioStreamPlayer" parent="." unique_id=314857023]
stream = ExtResource("3_cd7xo")

[node name="BearDialogue" type="AudioStreamPlayer" parent="." unique_id=205665938]
stream = ExtResource("4_4wya5")

[node name="MouseDialogue" type="AudioStreamPlayer" parent="." unique_id=360900398]
stream = ExtResource("5_bhwvj")

[node name="GiraffeDialogue" type="AudioStreamPlayer" parent="." unique_id=1759417167]
stream = ExtResource("6_jjmqj")

[node name="LionDialogue" type="AudioStreamPlayer" parent="." unique_id=15049147]
stream = ExtResource("7_g4ws7")

[node name="SnakeDialogue" type="AudioStreamPlayer" parent="." unique_id=788038068]
stream = ExtResource("8_7x6j8")
volume_db = 5.474

[node name="GameMusic" type="AudioStreamPlayer" parent="." unique_id=765153414]
stream = ExtResource("9_jjmqj")
